# SPR-Biosensor-Comparative-Approach

./: .gitignore  README.md  config.py  main.py  plot_results.py  pyproject.toml  requirements.txt  spr_simulation.py
docs/: index.html
docs/assets/: style.css
scripts/: extended_analysis.py  reproduce_paper.py
src/spr/: __init__.py
src/spr/analysis/: __init__.py  metrics.py
src/spr/materials/: __init__.py  database.py
src/spr/models/: __init__.py  sensor.py
src/spr/optics/: __init__.py  fresnel.py  tmm.py
src/spr/plotting/: __init__.py  figures.py
tests/: conftest.py  test_fresnel.py  test_materials.py  test_metrics.py  test_paper_regression.py  test_sensor.py  test_tmm.py
